--- a/projects.html
+++ b/projects.html
@@ -24,21 +24,21 @@ Use of bootstrap, with evidence of import to GitHub pages page
     <main class="content">
     <nav class="navbar" width="100%">
         <div class="container-fluid">
-                <a class="navbar-brand" href="Chariael.github.io/bunny.html">
+                <a class="navbar-brand" href="https://github.com/Chariael/Chariael.github.io/bunny.html">
             <img src="images/HazelCartoon2.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
           </a>
         <span class="navbar-brand mb-0 h1">NavBar:</span>
-              <a class="nav-link" href="Chariael.github.io/index.html">Home</a>
-              <a class="nav-link-active" aria-current="page" href="Chariael.github.io/projects.html">Projects</a>
-              <a class="nav-link" href="Chariael.github.io/bio.html">Biography</a>
-              <a class="nav-link" href="Chariael.github.io/contact.html">Contact</a>
+              <a class="nav-link" href="https://github.com/Chariael/Chariael.github.io/index.html">Home</a>
+              <a class="nav-link-active" aria-current="page" href="https://github.com/Chariael/Chariael.github.io/projects.html">Projects</a>
+              <a class="nav-link" href="https://github.com/Chariael/Chariael.github.io/bio.html">Biography</a>
+              <a class="nav-link" href="https://github.com/Chariael/Chariael.github.io/contact.html">Contact</a>
         </div>
     </nav>
     <h1>Projects</h1>
     <p> Charlotte is currently enrolled in MITxPro Emeritus' course: <a href="https://xpro.mit.edu/programs/program-v1:xPRO+PCCxW+R1/">Professional Certificate in Coding: Women's Cohort</a></p>
     <p id="p2"> In partial completion of the course requirements, she's been working on several projects. You can view them on GitHub and try them out by clicking these links: 
         <div id="p3">
-        <li><a href="https://github.com/Chariael/Eye-Exercise">The Eye Exercise</a></li>
+        <li><a href="https://github.com/Chariael/Eye-Exercise">The Eye Exercise</a> </li>
         <li><a href="https://github.com/Chariael/PacMen-Exercise">The Pac-Men Exercise</a></li>
         <li><a href="https://github.com/Chariael/Real-Time-Bus-Tracker">The Real-Time Bus Tracker</a></li>
         </div>
