--- a/contact.html
+++ b/contact.html
@@ -26,14 +26,14 @@ Use of bootstrap, with evidence of import to GitHub pages page
 
     <nav class="navbar" width="100%">
         <div class="container-fluid">
-                <a class="navbar-brand" href="Chariael.github.io/bunny.html">
+                <a class="navbar-brand" href="https://github.com/Chariael/Chariael.github.io/bunny.html">
             <img src="images/HazelCartoon2.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
           </a>
         <span class="navbar-brand mb-0 h1">NavBar:</span>
-              <a class="nav-link" href="Chariael.github.io/index.html">Home</a>
-              <a class="nav-link" href="Chariael.github.io/projects.html">Projects</a>
-              <a class="nav-link" href="Chariael.github.io/bio.html">Biography</a>
-              <a class="nav-link-active" aria-current="page" href="Chariael.github.io/contact.html">Contact</a>
+              <a class="nav-link" href="https://github.com/Chariael/Chariael.github.io/index.html">Home</a>
+              <a class="nav-link" href="https://github.com/Chariael/Chariael.github.io/projects.html">Projects</a>
+              <a class="nav-link" href="https://github.com/Chariael/Chariael.github.io/bio.html">Biography</a>
+              <a class="nav-link-active" aria-current="page" href="https://github.com/Chariael/Chariael.github.io/contact.html">Contact</a>
         </div>
     </nav>
 
