--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@ Use of bootstrap, with evidence of import to GitHub pages page
               <a class="nav-link" href="https://github.com/Chariael/Chariael.github.io/index.html">Home</a>
               <a class="nav-link" href="https://github.com/Chariael/Chariael.github.io/projects.html">Projects</a>
               <a class="nav-link" href="https://github.com/Chariael/Chariael.github.io/bio.html">Biography</a>
-              <a class="nav-link-active" aria-current="page" href="https://github.com/Chariael/Chariael.github.io/contact.html">Contact</a>
+              <a class="nav-link-active" href="https://github.com/Chariael/Chariael.github.io/contact.html">Contact</a>
         </div>
     </nav>
 
