--- a/projects.html
+++ b/projects.html
@@ -36,11 +36,11 @@ Use of bootstrap, with evidence of import to GitHub pages page
     </nav>
     <h1>Projects</h1>
     <p> Charlotte is currently enrolled in MITxPro Emeritus' course: <a href="https://xpro.mit.edu/programs/program-v1:xPRO+PCCxW+R1/">Professional Certificate in Coding: Women's Cohort</a></p>
-    <p id="p2"> In partial completion of the course requirements, she's been working on several projects. You can view them on GitHub and try them out by clicking these links: 
-        <div id="p3">
-        <li><a href="https://github.com/Chariael/Eye-Exercise">The Eye Exercise</a> </li>
-        <li><a href="https://github.com/Chariael/PacMen-Exercise">The Pac-Men Exercise</a></li>
-        <li><a href="https://github.com/Chariael/Real-Time-Bus-Tracker">The Real-Time Bus Tracker</a></li>
+    <p id="p2" style="grid-column: 2/5;"> In partial completion of the course requirements, she's been working on several projects. You can view them on GitHub and try them out by clicking these links: 
+        <div id="p3" style="grid-column: 2/5;">
+        <li><a href="https://github.com/Chariael/Eye-Exercise">The Eye Exercise:</a> Enjoy watching your computer watch you! </li>
+        <li><a href="https://github.com/Chariael/PacMen-Exercise">The Pac-Men Exercise:</a> A basic interactive animation that's a building block of favorite games.</li>
+        <li><a href="https://github.com/Chariael/Real-Time-Bus-Tracker">The Real-Time Bus Tracker:</a> A rudimentary navigation tool.</li>
         </div>
     </p>
     <div class="footer" style="grid-row: 8;">Copyright © 2021 <a href="https://www.mit.edu/">MIT</a> and Charlotte Royal Moline.</div>
