--- a/index.html
+++ b/index.html
@@ -38,16 +38,8 @@ Use of bootstrap, with evidence of import to GitHub pages page
         </nav>
         <h1>Charlotte Royal Moline</h1>
         <div class="video">
-            <video controls width="300">
-
-            <source src="/media/cc0-videos/flower.webm"
-                    type="video/webm">
-        
-            <source src="/media/cc0-videos/flower.mp4"
-                    type="video/mp4">
-        
-            Sorry, your browser doesn't support embedded videos.
-        </video>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Gx1CLKDnlT0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </video>
     </div>
 
     <p id="vp1"> Welcome to the web-presence of Charlotte Royal Moline.</p>
