--- a/projects.html
+++ b/projects.html
@@ -24,14 +24,14 @@ Use of bootstrap, with evidence of import to GitHub pages page
     <main class="content">
     <nav class="navbar" width="100%">
         <div class="container-fluid">
-                <a class="navbar-brand" href="https://github.com/Chariael/Chariael.github.io/bunny.html">
+                <a class="navbar-brand" href="https://Chariael.github.io/bunny.html">
             <img src="images/HazelCartoon2.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
           </a>
         <span class="navbar-brand mb-0 h1">NavBar:</span>
-              <a class="nav-link" href="https://github.com/Chariael/Chariael.github.io/index.html">Home</a>
-              <a class="nav-link-active" href="https://github.com/Chariael/Chariael.github.io/projects.html">Projects</a>
-              <a class="nav-link" href="https://github.com/Chariael/Chariael.github.io/bio.html">Biography</a>
-              <a class="nav-link" href="https://github.com/Chariael/Chariael.github.io/contact.html">Contact</a>
+              <a class="nav-link" href="https://Chariael.github.io/index.html">Home</a>
+              <a class="nav-link-active" href="https://Chariael.github.io/projects.html">Projects</a>
+              <a class="nav-link" href="https://Chariael.github.io/bio.html">Biography</a>
+              <a class="nav-link" href="https://Chariael.github.io/contact.html">Contact</a>
         </div>
     </nav>
     <h1>Projects</h1>
